--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header .logo
   left: 0;
   width: 100%;
   height: 100%;
-  background: #2f50c2;
+  background: #87c577;
   mix-blend-mode: overlay;
 }
 .text
