--- a/style.css
+++ b/style.css
@@ -89,15 +89,16 @@ header .logo
 
 .text h2
 {
-  font-size: 5em;
+  font-size: 4em;
   font-weight: 600;
   color: #fff;
   line-height: 1em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .text h3
 {
-  font-size: 4em;
+  font-size: 3em;
   font-weight: 500;
   color: #fff;
   line-height: 1em;
