--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header .logo
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  opacity: 1;
 }
 .overlay
 {
@@ -79,7 +79,7 @@ header .logo
   left: 0;
   width: 100%;
   height: 100%;
-  background: #03a9f4;
+  background: #0045b9;
   mix-blend-mode: overlay;
 }
 .text
